# FormFlow

./: KNOWN_ISSUES.md  index.html  readme.md  t.html  t2.html
backend2/: .env  .env.example  .gitignore  Comandos SSH y screen.md  README.md  docker-compose.yml  forms2.session.sql  logs.txt  pyproject.toml  requirements.txt
backend2/app/: main.py
backend2/app/base/application/: base.py
backend2/app/base/domain/exception/: __init__.py  business.py
backend2/app/base/domain/repository/: base.py
backend2/app/base/domain/schemas/: base.py  create_api.py  str_schema_json.py  types.py
backend2/app/base/infrastructure/database/: implementation.py  model.py  model_type.py  schema.py
backend2/app/base/infrastructure/service/: base.py
backend2/app/base/infrastructure/utils/: str_model_json.py
backend2/app/config/: db.py  env.py  init_api.py  init_db.py
backend2/app/form/application/: condition.py  create.py  dsl.py  form.py
backend2/app/form/domain/repository/: form.py
backend2/app/form/domain/schemas/: age_group.py  category.py  estimated_duration.py  form.py  form_condition.py  reference.py  target_sex.py  what_it_evaluate.py
backend2/app/form/infrastructure/database/: init.py  (+1 more)
backend2/app/question/application/: question.py
backend2/app/section/application/: section.py
backend2/app/utils/: log.py  str_class_json.py
backend2/app/utils/database/: table_name.md  table_name.py
backend2/app/utils/enum/: color.py  str_color.py
backend2/reports/: 2025_08_20_form_schema_sqlite_fix.md
backend2/tmp/: flush_refresh.md  motor.md  readme_init.md  todo.rm
(+345 files in other folders)
